--- a/confirmation.html
+++ b/confirmation.html
@@ -187,7 +187,7 @@
         }, 1200);
       }
     </script>
-    <a href="https://wa.me/237653924480" target="_blank" class="whatsapp-icon">
+    <a href="https://wa.me/+22602252587" target="_blank" class="whatsapp-icon">
       <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
     </a>
 
