--- a/inverstir.html
+++ b/inverstir.html
@@ -31,6 +31,7 @@
       font-weight: bold;
       color: #F0B90B;
       margin-bottom: 10px;
+      text-align: center;
     }
 
     .investment-section {
@@ -68,7 +69,7 @@
       box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
       border-radius: 10px;
       color: white;
-      width: fit-content;
+      /*width: fit-content;*/
     }
 
     .chart-container {
@@ -210,7 +211,7 @@
   <header id="header-section" style="display: block;">
     <div class="logo">AFRICA INVESTISSEMENT</div>
     <div class="investment-section">
-      <div class="balance" id="balance">Votre solde: 0 FCFA</div>
+      <div class="balance" id="balance">Votre solde: <span id="money"></span></div>
       <button id="invest-button">Mon Investissement</button>
       <button id="withdraw-button">Retirer</button>
     </div>
@@ -252,6 +253,18 @@
       window.location.href = 'index.html';
     }
 
+    const urlParams = new URLSearchParams(window.location.search);
+
+    if (urlParams.get('cash') == "Non renseigné") {
+      alert('Accès non autorisé. Vous allez être redirigé.');
+      window.location.href = 'index.html';
+    } else {
+      const cash = urlParams.get('cash') || "0";
+      document.getElementById('money').innerText = cash;
+    }
+
+
+
 
     let balance = 0;
     let currentPrice = 222.50;
@@ -280,53 +293,53 @@
 
 
     // Notifications de retrait
-      const withdrawalNotifications = [
-        'Mamadou Diao a retiré 2 450 000 FCFA 🎉✨',
-        'Fatoumata Traoré a retiré 1 200 000 FCFA 🎉✨',
-        'Alioune Badara a retiré 650 000 FCFA 🎉✨',
-        'Aissatou Diallo a retiré 3 000 000 FCFA 🎉✨',
-        'Khadidiatou Sy a retiré 1 500 000 FCFA 🎉✨',
-        'Serigne Diop a retiré 850 000 FCFA 🎉✨',
-        'Pape Cheikh a retiré 2 800 000 FCFA 🎉✨',
-        'Mame Diarra a retiré 700 000 FCFA 🎉✨',
-        'Seydou Kane a retiré 3 500 000 FCFA 🎉✨',
-        'Moustapha Faye a retiré 1 600 000 FCFA 🎉✨',
-        // Ajoutez d'autres notifications ici...
-      ];
+    const withdrawalNotifications = [
+      'Mamadou Diao a retiré 2 450 000 FCFA 🎉✨',
+      'Fatoumata Traoré a retiré 1 200 000 FCFA 🎉✨',
+      'Alioune Badara a retiré 650 000 FCFA 🎉✨',
+      'Aissatou Diallo a retiré 3 000 000 FCFA 🎉✨',
+      'Khadidiatou Sy a retiré 1 500 000 FCFA 🎉✨',
+      'Serigne Diop a retiré 850 000 FCFA 🎉✨',
+      'Pape Cheikh a retiré 2 800 000 FCFA 🎉✨',
+      'Mame Diarra a retiré 700 000 FCFA 🎉✨',
+      'Seydou Kane a retiré 3 500 000 FCFA 🎉✨',
+      'Moustapha Faye a retiré 1 600 000 FCFA 🎉✨',
+      // Ajoutez d'autres notifications ici...
+    ];
 
-      // Fonction pour afficher une notification
-      function showNotification(message) {
-        const notificationContainer = document.getElementById('notifications');
-        const notificationItem = document.createElement('div');
-        notificationItem.classList.add('notif');
-        notificationItem.innerText = message;
-        notificationContainer.appendChild(notificationItem);
+    // Fonction pour afficher une notification
+    function showNotification(message) {
+      const notificationContainer = document.getElementById('notifications');
+      const notificationItem = document.createElement('div');
+      notificationItem.classList.add('notif');
+      notificationItem.innerText = message;
+      notificationContainer.appendChild(notificationItem);
 
-        // Supprimer la notification après un délai
-        setTimeout(() => {
-          notificationItem.style.opacity = '0';
-          setTimeout(() => notificationItem.remove(), 1000);
-        }, 1500);
+      // Supprimer la notification après un délai
+      setTimeout(() => {
+        notificationItem.style.opacity = '0';
+        setTimeout(() => notificationItem.remove(), 1000);
+      }, 1500);
+    }
+
+    // Fonction pour afficher des notifications aléatoires
+    function showRandomNotifications() {
+      if (withdrawalNotifications.length > 0) {
+        // Sélectionner une notification aléatoire
+        const randomIndex = Math.floor(Math.random() * withdrawalNotifications.length);
+        const randomMessage = withdrawalNotifications[randomIndex];
+
+        // Afficher la notification
+        showNotification(randomMessage);
+
+        // Planifier la prochaine notification
+        const randomDelay = Math.random() * 3000 + 2000; // Délai entre 2 et 5 secondes
+        setTimeout(showRandomNotifications, randomDelay);
       }
+    }
 
-      // Fonction pour afficher des notifications aléatoires
-      function showRandomNotifications() {
-        if (withdrawalNotifications.length > 0) {
-          // Sélectionner une notification aléatoire
-          const randomIndex = Math.floor(Math.random() * withdrawalNotifications.length);
-          const randomMessage = withdrawalNotifications[randomIndex];
-
-          // Afficher la notification
-          showNotification(randomMessage);
-
-          // Planifier la prochaine notification
-          const randomDelay = Math.random() * 3000 + 2000; // Délai entre 2 et 5 secondes
-          setTimeout(showRandomNotifications, randomDelay);
-        }
-      }
-
-      // Lancer les notifications aléatoires
-      showRandomNotifications();
+    // Lancer les notifications aléatoires
+    showRandomNotifications();
 
 
     // Boutons d'investissement et retrait
