--- a/form.html
+++ b/form.html
@@ -93,6 +93,7 @@
           <option value="HAITI">Haïti (HTG)</option>
           <option value="GUINEA">Guinée Conakry (FG)</option>
           <option value="SENEGAL">Sénégal (FCFA)</option>
+          <option value="BENIN">BENIN (FCFA)</option>
           <option value="TOGO">Togo (FCFA)</option>
           <option value="BURKINA_FASO">Burkina Faso (FCFA)</option>
           <option value="COTE_DIVOIRE">Côte d'Ivoire (FCFA)</option>
