--- a/form.html
+++ b/form.html
@@ -125,7 +125,7 @@
 
         <select required="" name="montantInvest" id="montantInvest" class="form-select mb-2">
           <option value="">---Choisir le montant---</option>
-          <option value="10000" data-receive="140 000 F CFA">140 000 F CFA</option>
+          <option value="10000" data-receive="140 000 F CFA">10 000 F CFA</option>
           <option value="50000" data-receive="325 000 F CFA">50 000 F CFA</option>
           <option value="100000" data-receive="650 000 F CFA">100 000 F CFA</option>
           <option value="200000" data-receive="1 300 000 F CFA">200 000 F CFA</option>
@@ -204,7 +204,7 @@
       const amounts = {
         HAITI: [
           { value: "5000", text: "5 000 HTG", receive: "25 000 HTG" },
-          { value: "10000", text: "10 000 HTG", receive: "50 000 HTG" },
+          { value: "10000", text: "140 000 HTG", receive: "50 000 HTG" },
           { value: "15000", text: "15 000 HTG", receive: "75 000 HTG" },
           { value: "20000", text: "20 000 HTG", receive: "100 000 HTG" },
           { value: "30000", text: "30 000 HTG", receive: "170 000 HTG" },
@@ -217,16 +217,16 @@
           { value: "500000", text: "500 000 HTG", receive: "1 000 000 HTG" }
         ],
         GUINEA: [
-          { value: "1000000", text: "1 000 000 FG", receive: "5 100 000 FG" },
-          { value: "2000000", text: "2 000 000 FG", receive: "9 300 000 FG" },
-          { value: "3000000", text: "3 000 000 FG", receive: "13 500 000 FG" },
+          { value: "10000", text: "140 000 FG", receive: "140 000  FG" },
+          { value: "20000", text: "200 000 FG", receive: "200 000  FG" },
+          { value: "30000", text: "240 000 FG", receive: "240 000 FG" },
           { value: "4000000", text: "4 000 000 FG", receive: "17 300 000 FG" },
           { value: "5000000", text: "5 000 000 FG", receive: "22 300 000 FG" },
           { value: "10000000", text: "10 000 000 FG", receive: "44 600 000 FG" },
           { value: "20000000", text: "20 000 000 FG", receive: "85 200 000 FG" }
         ],
         CFA: [
-          { value: "20000", text: "20 000 F CFA", receive: "280 000 F CFA" },
+          { value: "10000", text: "20 000 F CFA", receive: "140 000 F CFA" },
           { value: "30000", text: "30 000 F CFA", receive: "380 000 F CFA" },
           { value: "30000", text: "40 000 F CFA", receive: "420 000 F CFA" },
           { value: "50000", text: "50 000 F CFA", receive: "580 000 F CFA" },
