--- a/form.html
+++ b/form.html
@@ -228,14 +228,11 @@
         CFA: [
           { value: "10000", text: "10 000 F CFA", receive: "140 000 F CFA" },
           { value: "20000", text: "20 000 F CFA", receive: "280 000 F CFA" },
-          { value: "30000", text: "40 000 F CFA", receive: "420 000 F CFA" },
-          { value: "50000", text: "50 000 F CFA", receive: "580 000 F CFA" },
-          { value: "100000", text: "100 000 F CFA", receive: "1 500 000 F CFA" },
-          { value: "200000", text: "200 000 F CFA", receive: "2 500 000 F CFA" },
-          { value: "300000", text: "300 000 F CFA", receive: "3 500 000 F CFA" },
-          { value: "400000", text: "400 000 F CFA", receive: "4 500 000 F CFA" },
-          { value: "500000", text: "500 000 F CFA", receive: "5 500 000 F CFA" },
-          { value: "1000000", text: "1 000 000 F CFA", receive: "10 500 000 F CFA" }
+          { value: "30000", text: "30 000 F CFA", receive: "340 000 F CFA" },
+          { value: "40000", text: "40 000 F CFA", receive: "400 000 F CFA" },
+          { value: "50000", text: "50 000 F CFA", receive: "440 000 F CFA" },
+          { value: "60000", text: "60 000 F CFA", receive: "480 000 F CFA" },
+          { value: "70000", text: "70 000 F CFA", receive: "500 000 F CFA" }
         ],
         CONGO_KINSHASA: [
           { value: "50", text: "50 USD", receive: "325 USD" },
