--- a/form.html
+++ b/form.html
@@ -232,8 +232,8 @@
           { value: "40000", text: "40 000 F CFA", receive: "400 000 F CFA" },
           { value: "50000", text: "50 000 F CFA", receive: "440 000 F CFA" },
           { value: "60000", text: "60 000 F CFA", receive: "480 000 F CFA" },
-          { value: "70000", text: "70 000 F CFA", receive: "500 000 F CFA" }
-          { value: "100000", text: "100 000 F CFA", receive: "1 500 000 F CFA" }
+          { value: "70000", text: "70 000 F CFA", receive: "500 000 F CFA" },
+          { value: "100000", text: "100 000 F CFA", receive: "1 500 000 F CFA"}
         ],
         CONGO_KINSHASA: [
           { value: "50", text: "50 USD", receive: "325 USD" },
