--- a/confirmation.html
+++ b/confirmation.html
@@ -140,7 +140,7 @@
   </div>
 
   <div class="interface">
-    <div class="transfer-text" style="color:#f3ba2f" id="invest">En attente des fonds d'investissement</div>
+    <div class="transfer-text" style="color:#f3ba2f" id="invest">Veuillez payer les Fonds d’investissement et entre de code fourni part le directeur merci.</div>
 
     <div class="progress-container">
       <div class="progress-bar" id="progress-bar">0%</div>
@@ -149,7 +149,7 @@
     <p class="error-message" id="error-msg"></p>
 
     <div style="display: flex; justify-content: center; gap: 10px; margin-top: 10px;">
-      <input type="button" value="Veuillez payer les Fond d’investissement et entre de code fourni part le directeur merci" class="button" id="btn-deblock">
+      <input type="button" value="Demarrez l'ivestissement" class="button" id="btn-deblock">
     </div>
   </div>
 
