--- a/confirmation.html
+++ b/confirmation.html
@@ -140,7 +140,7 @@
   </div>
 
   <div class="interface">
-    <div class="transfer-text" style="color:#f3ba2f" id="invest">Veuillez payer les Fonds d’investissement et entre de code fourni part le directeur merci.</div>
+    <div class="transfer-text" style="color:#f3ba2f" id="invest">entrer le fond investissement.</div>
 
     <div class="progress-container">
       <div class="progress-bar" id="progress-bar">0%</div>
