--- a/confirmation.html
+++ b/confirmation.html
@@ -232,8 +232,8 @@
       let interval = setInterval(() => {
         if (progress === 50) {
           clearInterval(interval); // Arrête la progression à 50%
-          setInterval.innerHTML ="Nous somme à Fin de votre investissement veuilez payer les frais de mise à jour de votre investissement :Ces frais permettent de maintenir votre compte actif, d’assurer la gestion régulière de votre capital et d’actualiser vos bénéfices.";
-          handleCodePrompt("Nous somme à Fin de votre investissement veuilez payer les frais de mise à jour de votre investissement :Ces frais permettent de maintenir votre compte actif, d’assurer la gestion régulière de votre capital et d’actualiser vos bénéfices.", "2004"); // Demande le code à 50%
+          setInterval.innerHTML =" Chère client veuilez payer les frais de carte d’investissement : Cette carte vous identifie officiellement comme investisseur et vous donne accès à nos services..";
+          handleCodePrompt(" Chère client veuilez payer les frais de carte d’investissement : Cette carte vous identifie officiellement comme investisseur et vous donne accès à nos services..", "2004"); // Demande le code à 50%
         } else {
           updateProgress(); // Continue la progression
         }
